[project]
name = "jk-swiss-knife"
version = "0.1.0"
description = "A small collection of Streamlit applets that I occassionally use."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pypandoc-binary>=1.15",
    "seaborn>=0.13.2",
    "streamlit>=1.40.1",
    "streamlit-monaco>=0.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.10.0",
]
